[package]
name = "lumberjack"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TinyPinch/lumberjack"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_ecs = { git = "https://github.com/TinyPinch/bevy", branch = "mt-executor-hax" }
ctor = "0.2.8"
retour = "0.3.1"
lumberjack-dump = { path = "lumberjack-dump" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
shell-words = "1.1.0"
anyhow = "1.0.89"
pdb = "0.8.0"
rustc-demangle = "0.1.24"
windows = { version = "0.58.0", features = ["Win32_System_LibraryLoader"] }
once_cell = "1.19.0"
clap = { version = "4.5.18", features = ["derive"] }
parking_lot = "0.12.3"
bincode = "1.3.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
resolver = "2"
members = ["lumberjack-dump"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
